# llm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
data/: chats_data_process.py  constants.py  utils.py
data/PIPPA/: process.py
llm/: utils.py
llm/alignment/: README.md  __init__.py
llm/alignment/reward_modeling/: ds_config_zero2.json  reward_utils.py  train_reward.py  train_rm.py
llm/alignment/reward_modeling/test/LLaMA-7B-Reward/: config.json  modeling_llama_rm.py
llm/alignment/reward_modeling/test/bloomz-7b1/: README.md  modeling_bloom_rm.py  tokenizer_config.json
llm/alignment/summarize_rlhf/: trlx_tldr.py
llm/alignment/summarize_rlhf/configs/: ppo_tldr.yml
llm/alignment/summarize_rlhf/configs/accelerate/: default_config_zero2.yaml
llm/data/: chats_dataset.py  constants.py  conversation.py  process_chats.py  utils.py
llm/data/PIPPA/: README.md
llm/tokenization/: tokenizer.py
llm/train/: ds_config_zero3.json  train.py  train_yi.py
reward_modeling/: rm_utils.py
reward_modeling/test/LLaMA-7B-Reward/: pytorch_model.bin.index.json  tokenizer_config.json
reward_modeling/test/bloomz-7b1/: config.json
scripts/: run_finetune.sh  run_finetune_yi.sh  run_reward_modeling.sh  run_summarize_reward_modeling.sh  run_summarize_rlhf.sh
summarize_rlhf/: README.md  ds-zero-dp-eval-model-generation.py  trlx_tldr.py  utils.py
summarize_rlhf/configs/: ppo_tldr.yml
summarize_rlhf/reward_model/: reward_model.py  train_reward_model.py
tests/: test_cli.py
(+1 files in other folders)
